--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -141,7 +141,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "    "
+    "    for i in range(4, m+1):\n",
+    "        i_chg = i\n",
+    "    while i_chg > 1:\n",
+    "        di_alternatives = []\n",
+    "        for coin in coin_kinds:\n",
+    "            if i_chg % coin == 0:\n",
+    "                di_alternatives.append(d[i_chg//coin]+1)\n",
+    "                i_chg //= coin\n",
+    "            else:\n",
+    "                continue\n",
+    "        if len(di_alternatives) == 0:\n",
+    "            d[i] = -1\n",
+    "            break\n",
+    "        else:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = min(di_alternatives)\n",
+    "        \n",
+    "        if i_chg == 1:\n",
+    "            break               "
    ]
   },
   {
