More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,18 +148,35 @@
     "        for coin in coin_kinds:\n",
     "            if i_chg % coin == 0:\n",
     "                di_alternatives.append(d[i_chg//coin]+1)\n",
-    "                i_chg //= coin\n",
+    "                #i_chg //= coin\n",
     "            else:\n",
     "                continue\n",
-    "    if len(di_alternatives) == 0 or i_chg != 1:\n",
-    "        d[i] = -1\n",
-    "        break\n",
-    "    else:\n",
-    "        if d[i] == 0:\n",
-    "            d[i] = min(di_alternatives)\n",
-    "    \n",
-    "    if i_chg == 1:\n",
-    "        break                     "
+    "        if len(di_alternatives) == 0 or i_chg != 1:\n",
+    "            d[i] = -1\n",
+    "            break\n",
+    "        else:\n",
+    "            if d[i] == 0:\n",
+    "                d[i] = min(di_alternatives)\n",
+    "        \n",
+    "        if i_chg == 1:\n",
+    "            break                     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
    ]
   },
   {
