--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -137,41 +137,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(4, m+1):\n",
-    "    i_chg = i\n",
+    "    \n",
     "    while i_chg > 1:\n",
     "        di_alternatives = []\n",
     "        for coin in coin_kinds:\n",
-    "            if i_chg % coin == 0:\n",
-    "                di_alternatives.append(d[i_chg//coin]+1)\n",
-    "                #i_chg //= coin\n",
+    "            if i % coin == 0:\n",
+    "                di_alternatives.append(d[i//coin]+1)\n",
+    "                i //= coin\n",
     "            else:\n",
     "                continue\n",
-    "        if len(di_alternatives) == 0 or i_chg != 1:\n",
+    "        if len(di_alternatives) == 0 or i != 1:\n",
     "            d[i] = -1\n",
     "            break\n",
     "        else:\n",
     "            if d[i] == 0:\n",
     "                d[i] = min(di_alternatives)\n",
     "        \n",
-    "        if i_chg == 1:\n",
+    "        if i == 1:\n",
     "            break                     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
+      "[0, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
      ]
     }
    ],
