--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,    m : 15\n",
-      "coin_kinds : [2, 3]\n"
+      "n : 3,    m : 30\n",
+      "coin_kinds : [2, 3, 5]\n"
      ]
     }
    ],
@@ -22,7 +22,7 @@
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
     "d = [0] * 16\n",
-    "d[0], d[1], d[2], d[3] = 0, 0, 1, 1"
+    "d[0], d[1], d[2], d[3], d[5] = 0, 0, 1, 1, 1"
    ]
   },
   {
@@ -65,9 +65,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32me:\\BAEKJOON_072723\\dbn_dp_count_min_coins.ipynb Cell 4\u001b[0m line \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W4sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m     \u001b[39mbreak\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W4sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m---> <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W4sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     \u001b[39mif\u001b[39;00m d[i] \u001b[39m==\u001b[39m \u001b[39m0\u001b[39m:\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W4sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m         d[i] \u001b[39m=\u001b[39m \u001b[39mmin\u001b[39m(di_alternatives)\n\u001b[0;32m     <a href='vscode-notebook-cell:/e%3A/BAEKJOON_072723/dbn_dp_count_min_coins.ipynb#W4sZmlsZQ%3D%3D?line=17'>18</a>\u001b[0m \u001b[39mif\u001b[39;00m i_chg \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m:\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "for i in range(4, m+1):\n",
     "    i_chg = i\n",
@@ -92,14 +104,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, -1, 1, -1, 3, 2, -1, -1, 2, -1, -1, -1]\n"
+      "[0, 0, 1, 1, 2, 1, 1, -1, 3, 2, 1, -1, 2, -1, -1, 1]\n"
      ]
     }
    ],
