More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -118,6 +118,42 @@
    "source": [
     "print(d)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (287146141.py, line 7)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    d = [1 if coin in coin_kinds else -1 for _ in range(1, m+1)\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "n, m = list(map(int, input().split()))\n",
+    "print(f\"n : {n},    m : {m}\")      # n : number of coin assortments,  m : target amount\n",
+    "\n",
+    "coin_kinds = [k for k in map(int, input().split())]\n",
+    "print(f\"coin_kinds : {coin_kinds}\")\n",
+    "\n",
+    "d = [1 if coin in coin_kinds else -1 for _ in range(1, m+1)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_min_coins(x):\n",
+    "    for coin in coin_kinds:\n",
+    "        d[coin] = 1\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
