More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -121,15 +121,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (287146141.py, line 7)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [2]\u001b[1;36m\u001b[0m\n\u001b[1;33m    d = [1 if coin in coin_kinds else -1 for _ in range(1, m+1)\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 3,    m : 30\n",
+      "coin_kinds : [2, 3, 5]\n",
+      "[-1, 1, 1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
      ]
     }
    ],
@@ -140,7 +141,9 @@
     "coin_kinds = [k for k in map(int, input().split())]\n",
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
-    "d = [1 if coin in coin_kinds else -1 for _ in range(1, m+1)]\n"
+    "d = [1 if i in coin_kinds else -1 for i in range(m+1)]\n",
+    "\n",
+    "print(d)"
    ]
   },
   {
