More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
      "text": [
       "n : 3,    m : 30\n",
       "coin_kinds : [2, 3, 5]\n",
-      "[-1, 1, 1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
+      "[-1, -1, 1, 1, -1, 1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1, -1]\n"
      ]
     }
    ],
@@ -153,9 +153,14 @@
    "outputs": [],
    "source": [
     "def count_min_coins(x):\n",
+    "    min_list = []\n",
     "    for coin in coin_kinds:\n",
-    "        d[coin] = 1\n",
-    "        "
+    "        if x % coin == 0:\n",
+    "            min_list.append(count_min_coins(x//coin)+1)\n",
+    "        else:\n",
+    "            continue\n",
+    "    d[x] = min(min_list)\n",
+    "    return d[x]         "
    ]
   }
  ],
