--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,8 @@
      "output_type": "stream",
      "text": [
       "n : 2,    m : 15\n",
-      "coin_kinds : [2, 3]\n"
+      "coin_kinds : [2, 3]\n",
+      "[0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -21,8 +22,8 @@
     "coin_kinds = [k for k in map(int, input().split())]\n",
     "print(f\"coin_kinds : {coin_kinds}\")\n",
     "\n",
-    "d = [0] * 16\n",
-    "d[0], d[1], d[2], d[3], d[5] = 0, 0, 1, 1, 1"
+    "d = [1 if k in coin_kinds else 0 for k in range(m+1)]\n",
+    "print(d)"
    ]
   },
   {
