--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 2,    m : 15\n",
-      "coin_kinds : [2, 3]\n",
-      "[0, 0, 1, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "n : 3,    m : 15\n",
+      "coin_kinds : [2, 3, 5]\n",
+      "[0, 0, 1, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -28,10 +28,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i : 4,  di_alt : [2]\n",
+      "i : 5,  di_alt : []\n",
+      "i : 6,  di_alt : [2, 2]\n",
+      "i : 7,  di_alt : []\n",
+      "i : 8,  di_alt : [3]\n",
+      "i : 9,  di_alt : [2]\n",
+      "i : 10,  di_alt : [0]\n",
+      "i : 11,  di_alt : []\n",
+      "i : 12,  di_alt : [3, 3]\n",
+      "i : 13,  di_alt : []\n",
+      "i : 14,  di_alt : [0]\n",
+      "i : 15,  di_alt : [0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4, m+1):\n",
+    "    di_alt = []\n",
+    "    for coin in coin_kinds:    \n",
+    "        if i % coin == 0:\n",
+    "           di_alt.append(d[i//coin]+1)\n",
+    "        else:            \n",
+    "            continue\n",
+    "    print(f\"i : {i},  di_alt : {di_alt}\")\n",
+    "    if len(di_alt) > 0:\n",
+    "        d[i] = min(di_alt) \n",
+    "    else:\n",
+    "        d[i] = -1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 1, 1, 2, -1, 2, -1, 3, 2, 0, -1, 3, -1, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(d)"
+   ]
   },
   {
    "cell_type": "code",
