More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -36,17 +36,17 @@
      "output_type": "stream",
      "text": [
       "i : 4,  di_alt : [2]\n",
-      "i : 5,  di_alt : []\n",
+      "i : 5,  di_alt : [1]\n",
       "i : 6,  di_alt : [2, 2]\n",
       "i : 7,  di_alt : []\n",
       "i : 8,  di_alt : [3]\n",
       "i : 9,  di_alt : [2]\n",
-      "i : 10,  di_alt : [0]\n",
+      "i : 10,  di_alt : [2, 2]\n",
       "i : 11,  di_alt : []\n",
       "i : 12,  di_alt : [3, 3]\n",
       "i : 13,  di_alt : []\n",
       "i : 14,  di_alt : [0]\n",
-      "i : 15,  di_alt : [0]\n"
+      "i : 15,  di_alt : [2, 2]\n"
      ]
     }
    ],
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, -1, 2, -1, 3, 2, 0, -1, 3, -1, 0, 0]\n"
+      "[0, 0, 1, 1, 2, 1, 2, -1, 3, 2, 2, -1, 3, -1, 0, 2]\n"
      ]
     }
    ],
