More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -59,22 +59,22 @@
     "        else:            \n",
     "            continue\n",
     "    print(f\"i : {i},  di_alt : {di_alt}\")\n",
-    "    if len(di_alt) > 0:\n",
-    "        d[i] = min(di_alt) \n",
+    "    if len(di_alt) == 0 or d[i] == 0:\n",
+    "        d[i] = -1\n",
     "    else:\n",
-    "        d[i] = -1"
+    "        d[i] = min(di_alt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, 1, 2, -1, 3, 2, 2, -1, 3, -1, 0, 2]\n"
+      "[0, 0, 1, 1, 2, 1, 2, -1, 3, 2, 2, -1, 3, -1, -1, 2]\n"
      ]
     }
    ],
