More on dbn_dp_count_min_coins.ipynb

--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
     "        else:            \n",
     "            continue\n",
     "    print(f\"i : {i},  di_alt : {di_alt}\")\n",
-    "    if len(di_alt) == 0 or d[i] == 0:\n",
+    "    if len(di_alt) == 0 or min(di_alt) == 0:\n",
     "        d[i] = -1\n",
     "    else:\n",
     "        d[i] = min(di_alt)"
