--- a/dbn_dp_count_min_coins.ipynb
+++ b/dbn_dp_count_min_coins.ipynb
@@ -9,9 +9,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 4,    m : 30\n",
-      "coin_kinds : [2, 3, 5, 7]\n",
-      "[0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
+      "n : 5,    m : 30\n",
+      "coin_kinds : [2, 3, 5, 7, 13]\n",
+      "[0, 0, 1, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -44,7 +44,7 @@
       "i : 10,  di_alt : [2, 2]\n",
       "i : 11,  di_alt : []\n",
       "i : 12,  di_alt : [3, 3]\n",
-      "i : 13,  di_alt : []\n",
+      "i : 13,  di_alt : [1]\n",
       "i : 14,  di_alt : [2, 2]\n",
       "i : 15,  di_alt : [2, 2]\n",
       "i : 16,  di_alt : [4]\n",
@@ -57,7 +57,7 @@
       "i : 23,  di_alt : []\n",
       "i : 24,  di_alt : [4, 4]\n",
       "i : 25,  di_alt : [2]\n",
-      "i : 26,  di_alt : [0]\n",
+      "i : 26,  di_alt : [2, 2]\n",
       "i : 27,  di_alt : [3]\n",
       "i : 28,  di_alt : [3, 3]\n",
       "i : 29,  di_alt : []\n",
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 0, 1, 1, 2, 1, 2, 1, 3, 2, 2, -1, 3, -1, 2, 2, 4, -1, 3, -1, 3, 2, -1, -1, 4, 2, -1, 3, 3, -1, 3]\n"
+      "[0, 0, 1, 1, 2, 1, 2, 1, 3, 2, 2, -1, 3, 1, 2, 2, 4, -1, 3, -1, 3, 2, -1, -1, 4, 2, 2, 3, 3, -1, 3]\n"
      ]
     }
    ],
