--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -9,7 +9,7 @@
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")   # n : height   m : width\n",
     "\n",
-    "goldmine = [x for x in map(int, input().split())]\n",
+    "goldmine = [x for x in map(int, input().split())]    # 1 3 3 2 2 1 4 1 0 6 4 7\n",
     "print(goldmine)"
    ]
   }
