--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,14 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n : 3,  m : 4\n",
+      "[1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]\n"
+     ]
+    }
+   ],
    "source": [
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")   # n : height   m : width\n",
     "\n",
     "goldmine = [x for x in map(int, input().split())]    # 1 3 3 2 2 1 4 1 0 6 4 7\n",
+    "print(goldmine)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goldmine = [[x for _ in range(m)] for x in map(int, input().split())]\n",
     "print(goldmine)"
    ]
   }
@@ -21,7 +40,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.9.12"
   },
   "orig_nbformat": 4
