--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -10,7 +10,9 @@
      "output_type": "stream",
      "text": [
       "n : 3,  m : 4\n",
-      "[1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]\n"
+      "[0, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n"
      ]
     }
    ],
@@ -18,18 +20,87 @@
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")   # n : height   m : width\n",
     "\n",
-    "goldmine = [x for x in map(int, input().split())]    # 1 3 3 2 2 1 4 1 0 6 4 7\n",
+    "my_input = [x for x in map(int, input().split())]    # 1 3 3 2 2 1 4 1 0 6 4 7\n",
+    "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
+    "\n",
+    "for i in range(len(goldmine)):\n",
+    "    for j in range(goldmine[i]):\n",
+    "        goldmine[i][j] = my_input[(i+1)*(j+1)]   \n",
+    "\n",
+    "for row in goldmine:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "goldmine = [x for x in map(int, input().split())]\n",
+    "\n",
+    "\n",
     "print(goldmine)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 1, 1, 1], [1, 1, 1, 1], [1, 1, 1, 1]]\n",
+      "[[3, 3, 3, 3], [3, 3, 3, 3], [3, 3, 3, 3]]\n",
+      "[[3, 3, 3, 3], [3, 3, 3, 3], [3, 3, 3, 3]]\n",
+      "[[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2, 2]]\n",
+      "[[2, 2, 2, 2], [2, 2, 2, 2], [2, 2, 2, 2]]\n",
+      "[[1, 1, 1, 1], [1, 1, 1, 1], [1, 1, 1, 1]]\n",
+      "[[4, 4, 4, 4], [4, 4, 4, 4], [4, 4, 4, 4]]\n",
+      "[[1, 1, 1, 1], [1, 1, 1, 1], [1, 1, 1, 1]]\n",
+      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n",
+      "[[6, 6, 6, 6], [6, 6, 6, 6], [6, 6, 6, 6]]\n",
+      "[[4, 4, 4, 4], [4, 4, 4, 4], [4, 4, 4, 4]]\n",
+      "[[7, 7, 7, 7], [7, 7, 7, 7], [7, 7, 7, 7]]\n"
+     ]
+    }
+   ],
    "source": [
-    "goldmine = [[x for _ in range(m)] for x in map(int, input().split())]\n",
-    "print(goldmine)"
+    "n, m = 3, 4\n",
+    "k = [[[x for _ in range(m)] for _ in range(n)] for x in map(int, input().split())]\n",
+    "for row in k:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k = [x for x in map(int, input().split())]\n",
+    "k"
    ]
   }
  ],
