--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,17 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 3,  m : 4\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n"
+      "n : 3,  m : 4\n"
      ]
     }
    ],
@@ -23,8 +20,8 @@
     "my_input = [x for x in map(int, input().split())]    # 1 3 3 2 2 1 4 1 0 6 4 7\n",
     "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
     "\n",
-    "for i in range(len(goldmine), -1):\n",
-    "    for j in range(len(goldmine[i]), -1):\n",
+    "for i in range(len(goldmine), 0, -1):\n",
+    "    for j in range(len(goldmine[i]), 0, -1):\n",
     "        #goldmine[i][j] = my_input.pop() \n",
     "        print((i, j)) "
    ]
