--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,14 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "n : 3,  m : 4\n"
+      "n : 3,  m : 4\n",
+      "[1, 3, 3, 2]\n",
+      "[2, 1, 4, 1]\n",
+      "[0, 6, 4, 7]\n"
      ]
     }
    ],
@@ -22,29 +25,10 @@
     "\n",
     "for i in range(len(goldmine)-1, -1, -1):\n",
     "    for j in range(len(goldmine[i])-1, -1, -1):\n",
-    "        #goldmine[i][j] = my_input.pop() \n",
-    "        print((i, j)) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(7, [1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k = [2,3,5,6 7]\n",
-    "for i in range(len(k))"
+    "        goldmine[i][j] = my_input.pop() \n",
+    "\n",
+    "for row in goldmine:\n",
+    "    print(row)"
    ]
   },
   {
