--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -47,33 +47,39 @@
     }
    ],
    "source": [
-    "for x in map(int, input().split()):\n",
-    "    for i in range(len(goldmine)):\n",
-    "        for j in range(len(goldmine[i])):\n",
-    "            goldmine[i][j] = x\n",
-    "            \n",
+    "n, m = map(int, input().split())\n",
+    "print(f\"n : {n},  m : {m}\")\n",
+    "\n",
+    "my_input = list(map(int, input().split()))\n",
+    "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
+    "\n",
+    "for i in range(len(goldmine)):\n",
+    "    for j in range(len(goldmine[i])):\n",
+    "        goldmine[i][j] = my_input.pop(0)\n",
+    "        \n",
     "for row in goldmine:\n",
     "    print(row)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "goldmine = [x for x in map(int, input().split())]\n",
-    "\n",
-    "\n",
-    "print(goldmine)"
+    "k = [1, 3, 3, 2, 2, 1, 4, 1, 0, 6, 4, 7]\n",
+    "k.pop(0)"
    ]
   },
   {
