--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
      "text": [
       "n : 3,  m : 4\n",
       "[1, 3, 3, 2]\n",
-      "[2, 1, 4, 1]\n",
+      "[2, 1, 4, 7]\n",
       "[0, 6, 4, 7]\n"
      ]
     }
@@ -20,7 +20,7 @@
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")\n",
     "\n",
-    "my_input = list(map(int, input().split()))\n",
+    "my_input = list(map(int, input().split()))   # 1 3 3 2 2 1 4 7 0 6 4 7\n",
     "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
     "\n",
     "for i in range(len(goldmine)):\n",
