More on dbn_dp_goldmine.ipynb

--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -30,6 +30,32 @@
     "for row in goldmine:\n",
     "    print(row)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0] * m\n",
+    "a[0] = max(goldmine[j][0] for j in range(len(goldmine)))\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
