--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -33,6 +33,31 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 0, 0, 0]\n",
+      "[2, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "submax_by_col = [[0] * m for _ in range(n)]\n",
+    "    \n",
+    "for j in range(len(submax_by_col)):\n",
+    "    submax_by_col[j][0] = goldmine[j][0]\n",
+    "    \n",
+    "for row in submax_by_col:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -45,6 +70,8 @@
     }
    ],
    "source": [
+    "\n",
+    "\n",
     "a = [0] * m\n",
     "a[0] = max(goldmine[j][0] for j in range(len(goldmine)))\n",
     "print(a)"
@@ -55,7 +82,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for j in range(len(goldmine)):\n",
+    "    for k in range(-1, 2):\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
