More on dbn_dp_goldmine.ipynb

--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,8 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "a = [0] * m\n",
-    "a[0] = max(goldmine[j][0] for j in range(len(goldmine)))\n",
+    "a[0] = max(submax_by_col[j][0] for j in range(len(submax_by_col)))\n",
     "print(a)"
    ]
   },
