--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(submax_by_col[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for j in range(len(goldmine)):\n",
-    "    for k in range(-1, 2):\n",
-    "        "
+    "for i in range(1, len(submax_by_col)):\n",
+    "    for j in range(len(submax_by_col[i])):\n",
+    "        sub_list = []\n",
+    "        for k in range(-1, 2):\n",
+    "            if (i-k) < 0 or (i+k) >= len(submax_by_col):\n",
+    "                continue\n",
+    "            else:\n",
+    "                sub_list.append(submax_by_col[i][j-1] + goldmine[i+k][j])\n",
+    "        submax_by_col[i][j] = max(sub_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 3, 2]\n",
+      "[2, 1, 4, 7]\n",
+      "[0, 6, 4, 7]\n",
+      "\n",
+      "[1, 0, 0, 0]\n",
+      "[2, 8, 12, 19]\n",
+      "[2, 8, 12, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in goldmine:\n",
+    "    print(row)\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "for row in submax_by_col:\n",
+    "    print(row)"
    ]
   }
  ],
