More on dbn_dp_goldmine.ipynb

--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -20,7 +20,7 @@
     "n, m = map(int, input().split())\n",
     "print(f\"n : {n},  m : {m}\")\n",
     "\n",
-    "my_input = list(map(int, input().split()))   # 1 3 3 2 2 1 4 7 0 6 4 7\n",
+    "my_input = list(map(int, input().split()))   # 1 3 3 2 2 1 4 7 0 6 4 7    # 1 3 1 5 2 2 4 1 5 0 2 3 0 6 1 2\n",
     "goldmine = [[0 for _ in range(m)] for _ in range(n)]\n",
     "\n",
     "for i in range(len(goldmine)):\n",
