More on dbn_dp_goldmine.ipynb

--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -73,7 +73,7 @@
     "            elif (i+k) >= len(submax_by_col):\n",
     "                continue\n",
     "            else:\n",
-    "                sub_list.append(submax_by_col[i][j-1] + goldmine[i+k][j])\n",
+    "                sub_list.append(submax_by_col[i+k][j-1] + goldmine[i][j])\n",
     "        submax_by_col[i][j] = max(sub_list)"
    ]
   },
