--- a/dbn_dp_goldmine.ipynb
+++ b/dbn_dp_goldmine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -79,12 +79,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(submax_by_col)):\n",
-    "    for j in range(1, len(submax_by_col[i])):\n",
+    "    for j in range(1, len(submax_by_col[0])):\n",
     "        sub_list = []\n",
     "        for k in range(-1, 2):\n",
     "            if (i+k) >= 0 and (i+k) < len(submax_by_col):\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -108,10 +108,10 @@
       "[5, 0, 2, 3]\n",
       "[0, 6, 1, 2]\n",
       "\n",
-      "[1, 0, 0, 0]\n",
-      "[2, 0, 0, 0]\n",
-      "[5, 0, 0, 0]\n",
-      "[0, 0, 0, 0]\n"
+      "[1, 5, 6, 11]\n",
+      "[2, 7, 11, 12]\n",
+      "[5, 5, 9, 14]\n",
+      "[0, 11, 12, 14]\n"
      ]
     }
    ],
