dbn_dp_soldier.ipynb

--- a/dbn_dp_soldier.ipynb
+++ b/dbn_dp_soldier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -21,17 +21,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_removals(array, k):\n",
-    "    cnt = 0\n",
     "    subArray = array[k:]\n",
-    "    for i in range(len(subArray)):\n",
-    "        if subArray[i] > subArray[0]:\n",
-    "            cnt += 1\n",
-    "    return cnt"
+    "    for i in range(1, len(subArray)):\n",
+    "        if subArray[i] > subArray[i-1]:\n",
+    "            array.pop(i)\n",
+    "    return len(subArray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[7, 6, 5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cnt_list = []\n",
+    "for i in range(len(soldiers)):\n",
+    "    cnt_list.append(count_removals(soldiers, i))\n",
+    "\n",
+    "cnt_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_removals(soldiers, 0)"
    ]
   }
  ],
