More on dbn_dp_soldiers.ipynb

--- a/dbn_dp_soldier.ipynb
+++ b/dbn_dp_soldier.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -21,32 +21,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_removals(array, k):\n",
     "    subArray = array[k:]\n",
+    "    removal_cnt = len(array) - len(subArray)   # initialize the number of removals\n",
     "    for i in range(1, len(subArray)):\n",
     "        if subArray[i] > subArray[i-1]:\n",
-    "            array.pop(i)\n",
-    "    return len(subArray)"
+    "            removal_cnt += 1\n",
+    "            subArray[i-1], subArray[i] = subArray[i], subArray[i-1]\n",
+    "    remaining_cnt = len(array) - removal_cnt\n",
+    "    return (remaining_cnt, removal_cnt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[7, 6, 5, 4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(10, 5), (9, 6), (8, 7), (7, 8), (6, 9), (9, 6), (8, 7), (7, 8), (6, 9), (5, 10), (4, 11), (3, 12), (3, 12), (2, 13), (1, 14)]\n",
+      "[(10, 5), (9, 6), (9, 6), (8, 7), (8, 7), (7, 8), (7, 8), (6, 9), (6, 9), (5, 10), (4, 11), (3, 12), (3, 12), (2, 13), (1, 14)]\n"
+     ]
     }
    ],
    "source": [
@@ -54,7 +55,9 @@
     "for i in range(len(soldiers)):\n",
     "    cnt_list.append(count_removals(soldiers, i))\n",
     "\n",
-    "cnt_list"
+    "print(cnt_list)\n",
+    "sorted_cnt_list = sorted(cnt_list, key=lambda x : x[0], reverse=True)\n",
+    "print(sorted_cnt_list)"
    ]
   },
   {
