dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,10 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.TextIOWrapper name='data/dbn_dijkstra.txt' mode='r' encoding='UTF-8'>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "txt = open(\"data/dbn_dijkstra.txt\", \"r\")\n"
+   ]
   }
  ],
  "metadata": {
