dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
    "source": [
     "input = open(\"data/dbn_dijkstra.txt\", \"r\")\n",
     "\n",
-    "n, m, c = map(int, input.readline().rstrip().split())\n",
+    "n, m, c = map(int, input.readline().rstrip().split())    # n : number of nodes,  m : number of edges,  c : start city\n",
     "print(f\"n : {n},   m : {m},   c : {c}\")"
    ]
   }
