dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -29,6 +29,19 @@
     "n, m, c = map(int, input.readline().rstrip().split())    # n : number of nodes,  m : number of edges,  c : start city\n",
     "print(f\"n : {n},   m : {m},   c : {c}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INF = int(1e9)    # set infinity to 1e9\n",
+    "start = c         # start node\n",
+    "\n",
+    "graph = [[] for _ in range(n+1)]       # A list that stores nodes which connect to every node from 1 to n\n",
+    "visited = [False] * (n+1)              # A list that checks if a node is visited or not"
+   ]
   }
  ],
  "metadata": {
