dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -40,7 +40,8 @@
     "start = c         # start node\n",
     "\n",
     "graph = [[] for _ in range(n+1)]       # A list that stores nodes which connect to every node from 1 to n\n",
-    "visited = [False] * (n+1)              # A list that checks if a node is visited or not"
+    "visited = [False] * (n+1)              # A list that checks if a node is visited or not\n",
+    "distance = [INF] * (n+1)               # A list that stores shortest paths all of which default to INF"
    ]
   }
  ],
