dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,6 +42,17 @@
     "graph = [[] for _ in range(n+1)]       # A list that stores nodes which connect to every node from 1 to n\n",
     "visited = [False] * (n+1)              # A list that checks if a node is visited or not\n",
     "distance = [INF] * (n+1)               # A list that stores shortest paths all of which default to INF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for _ in range(m):\n",
+    "    a, b, c = map(int, input.readline().rstrip().split())\n",
+    "    graph[a] = ((b, c))"
    ]
   }
  ],
