dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -64,12 +64,14 @@
     }
    ],
    "source": [
+    "\"\"\"\n",
     "for _ in range(m):\n",
     "    a, b, c = map(int, input.readline().rstrip().split())\n",
     "    graph[a].append((b, c))\n",
     "    \n",
     "for row in graph:\n",
-    "    print(row)"
+    "    print(row)\n",
+    "\"\"\""
    ]
   },
   {
@@ -102,6 +104,13 @@
     "for k, v in graph_dict.items():\n",
     "    print(f\"{k} : {v}\")   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
