dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -104,10 +104,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000, 1000000000]\n",
+      "[False, False, False, False, False, False, False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(distance)\n",
+    "print(visited)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\"\"\"방문하지 않은 노드들중에서 최단거리가 가장 짧은 노드의 인덱스를 반환\"\"\"\n",
+    "def get_smallest_node():\n",
+    "    min_value = INF\n",
+    "    index = 0  # 최단거리가 가장 짧은 노드의 인덱스\n",
+    "    for i in range(1, n+1):\n",
+    "        if distance[i] < min_value and not visited:"
+   ]
   }
  ],
  "metadata": {
