dbn_dijkstra.ipynb

--- a/dbn_dijkstra.ipynb
+++ b/dbn_dijkstra.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +136,34 @@
     "            min_value = distance[i]\n",
     "            index = i\n",
     "    return index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"dijstra algorithm\"\"\"\n",
+    "def dijkstra(start):\n",
+    "    \"\"\"시작노드를 초기화한다.\"\"\"\n",
+    "    distance[start] = 0\n",
+    "    visited[start] = True\n",
+    "    \n",
+    "    for j in graph_dict[start]:\n",
+    "        distance[j[0]] = j[1]\n",
+    "        \n",
+    "    \"\"\"시작노드를 제외한 다른 모든 n-1개의 노드에 대해 반복한다.\"\"\"\n",
+    "    for i in range(n-1):\n",
+    "        \"\"\"현재 최단거리가 가장 짧은 node에 대해 방문처리한다.\"\"\"\n",
+    "        now = get_smallest_node()\n",
+    "        visited[now] = True\n",
+    "        \"\"\"현재노드와 연결된 다른 노드들 확인\"\"\"\n",
+    "        for j in graph_dict[now]:\n",
+    "            cost = distance[now] + j[1]\n",
+    "            \"\"\"현재노드를 거쳐서 다른노드로의 이동거리가 최단거리테이블에 저장된 거리보다 짧은 경우에 최단거리테이블을 갱신한다.\"\"\"\n",
+    "            if cost < distance[j[0]]:\n",
+    "                distance[j[0]] = cost"
    ]
   }
  ],
